tests/NormalTests/paczka1/fuzzy1/74831793.err
Error in line 5: 1UEvptZFb S411 67,5
Error in line 13: CemyV S411 57,6
Error in line 9: rXM9RpR0S S615 92,9
Error in line 20: A534 S411 83,4
